# chord-core

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
datasets/: acoustic_mic_0.labels.csv
docs/: MILESTONES.md
include/: audio_loader.h  chord_detector.h  chord_result.h  chord_template_matcher.h  chroma_extractor.h  evaluation.h  fft_processor.h  signal_analysis.h  temporal_smoother.h
scripts/: generate_label_csv.py
src/: analyze_main.cpp  audio_loader.cpp  chord_detector.cpp  chord_template_matcher.cpp  chroma_extractor.cpp  eval_main.cpp  evaluation.cpp  fft_processor.cpp  main.cpp  signal_analysis.cpp  temporal_smoother.cpp  validate_labels_main.cpp
tests/: test_audio_loader.cpp  test_chord_detector.cpp  test_chord_template_matcher.cpp  test_chroma_extractor.cpp  test_evaluation.cpp  test_fft_processor.cpp  test_signal_analysis.cpp  test_temporal_smoother.cpp
